--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,10 +10,11 @@
 }
 
 body {
-    background-image: url(./img/hero-alisson.png);
+    background-image: url(../img/hero-alisson.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
     font-family: 'Roboto', Arial, Helvetica, sans-serif; 
+    background-color: #E3E6F3;
 }
 
 header {
@@ -29,13 +30,13 @@ main {
     width: 40%;
     height: 50%;
     top: 42%;
-    left: 30px;
+    left: 5%;
     display: inline-block;
     padding: 10px;
 }
 
 h1 {
-    font-size: small;
+    font-size: 0.8rem;
     margin-bottom: 10px;
 }
 
@@ -46,7 +47,7 @@ p {
 }
 
 h2 {
-    font-size: 2.1rem;
+    font-size: 2.7rem;
 }
 
 /*======Classes======*/
@@ -65,14 +66,84 @@ h2 {
 .shop {
     position: absolute;
     bottom: 30%;
-    left: 35%;
-    font-size: small;
+    left: 32%;
+    font-size: 1rem;
     color:#4A9285;
     font-weight: bold;
 }
 
 .button img {
     width: 180px;
+}
+
+.dropdown {
+    display: none; 
+}
+
+.navmenu-mobile {
+    position: relative;
+    display: block;
+}
+
+.dropdown {
+    position: absolute;
+    top: 26%;
+    left: 80%;
+}
+
+li {
+    list-style-type: none;
+}
+
+.icon {
+    padding-bottom: 60%;
+}
+
+.icon a {
+    color: black;
+}
+
+.dropdown a {
+    text-decoration: none;
+}
+
+.dropdown-menu {
+    position: absolute;
+    background-color: #258D87;
+    box-shadow: 1px 1px 6px black;
+    padding: 15px;
+    display: none;
+}
+.dropdown-menu a {
+    color: white;
+    display: block;
+    padding: 10px;
+    font-size: x-small;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.dropdown:hover .icon a {
+    color: #258D87;
+}
+
+.dropdown-menu a:hover {
+    color: white;
+    font-weight: bold;
+}
+
+.dropdown-menu a::after {
+    content: "";
+    display: block;
+    border-radius: 200px;
+}
+
+.dropdown-menu a:hover::after {
+    width: 20px;
+    height: 3px;
+    background-color:white;
 }
 
 /*======IDs======*/
@@ -87,8 +158,8 @@ div#logo img {
 
 nav#menu {
     position: absolute;
-    left: 70%;
     top: 0%;
+    left: 60%;
 }
 
 nav#menu li {
@@ -100,7 +171,7 @@ nav#menu li {
 nav#menu li a {
     color:black;
     text-decoration: none;
-    font-size: small;
+    font-size: medium;
 }
 
 nav#menu li a:hover {
@@ -120,5 +191,68 @@ nav#menu li a:hover::after {
     background-color: #258D87;
 }
 
-    
+/*======Responsive======*/  
+
+@media (max-width: 1060px) {
+    nav#menu {
+        position: absolute;
+        top: 0;
+        left: 50%;
+    }
+
+    main {
+        position: absolute;
+        width: 40%;
+        height: 50%;
+        top: 20%;
+        left: 1%;
+        display: inline-block;
+        padding: 10px;
+    }
+}
    
+@media (max-width: 894px) {
+    main {
+        position: absolute;
+        width: 70%;
+        height: 80%;
+        top: 20%;
+        left: 1%;
+        display: inline-block;
+        padding: 10;
+    }
+
+    h2 {
+        font-size: 1.9rem;
+    }
+
+    nav#menu li a {
+        color:black;
+        text-decoration: none;
+        font-size: small;
+    }
+}
+
+
+@media (max-width: 764px) {
+    nav#menu {
+        display: none;
+    }
+
+    .dropdown {
+        display: block; 
+    }
+
+}
+
+@media (max-width: 620px) {
+    main {
+        position: absolute;
+        width: 70%;
+        height: 80%;
+        top: 50%;
+        left: 15%;
+        display: inline-block;
+        padding: 10;
+    }
+}
