--- a/CSS/style.css
+++ b/CSS/style.css
@@ -219,7 +219,7 @@ nav#menu li a:hover::after {
         top: 20%;
         left: 1%;
         display: inline-block;
-        padding: 10;
+        padding: 10px;
     }
 
     h2 {
@@ -253,6 +253,6 @@ nav#menu li a:hover::after {
         top: 50%;
         left: 15%;
         display: inline-block;
-        padding: 10;
+        padding: 10px;
     }
 }
